--- a/pom.xml
+++ b/pom.xml
@@ -6,33 +6,6 @@
 	<artifactId>datecalander</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
-		<maven.compiler.source>8</maven.compiler.source>
-		<maven.compiler.target>8</maven.compiler.target>
-	</properties>
-
-<build>
-    <plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.8.1</version>
-            <configuration>
-                <source>8</source>
-                <target>8</target>
-                <compilerArgs>
-                    <arg>--release</arg>
-                    <arg>8</arg>
-                </compilerArgs>
-            </configuration>
-        </plugin>
-    </plugins>
-</build>
-
-
 	<dependencies>
 		<!-- SLF4J API -->
 		<dependency>
@@ -48,13 +21,11 @@
 			<version>1.2.17</version>
 		</dependency>
 
-		<!--This is for selenium java interaction-->
-		<!--
-		https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+		<!--Ensure you have the latest Selenium 4.14+ -->
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>4.27.0</version>
+			<version>4.27.0</version>  <!-- Latest version -->
 		</dependency>
 
 		<!--
@@ -111,6 +82,21 @@
 
 	</dependencies>
 
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>8</source>
+					<target>8</target>
+					<release>8</release>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<profiles>
 
 		<profile>
